--- a/packages/server/public/css/stylesheet.css
+++ b/packages/server/public/css/stylesheet.css
@@ -835,6 +835,9 @@ video {
 .z-\[1050\] {
   z-index: 1050;
 }
+.z-\[60\] {
+  z-index: 60;
+}
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -1956,10 +1959,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
-.bg-\[rgb\(73\2c 95\2c 52\)\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(73 95 52 / var(--tw-bg-opacity));
-}
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -2369,14 +2368,6 @@ video {
 .text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(133 77 14 / var(--tw-text-opacity));
-}
-.text-bg-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(var(--bg-secondary) / var(--tw-text-opacity));
-}
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -3185,18 +3176,13 @@ img.mana-symbol-sm {
   background-color: rgb(var(--button-secondary-active) / var(--tw-bg-opacity));
 }
 
+.hover\:bg-card-green\/80:hover {
+  background-color: rgb(var(--card-green) / 0.8);
+}
+
 .hover\:bg-gray-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[rgb\(51\2c 70\2c 35\)\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 70 35 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-card-green\/80:hover {
-  background-color: rgb(var(--card-green) / 0.8);
 }
 
 .hover\:\!text-link-active:hover {
@@ -4181,16 +4167,6 @@ img.mana-symbol-sm {
     background-color: rgb(127 29 29 / 0.2);
   }
 
-  .dark\:bg-bg-active {
-    --tw-bg-opacity: 1;
-    background-color: rgb(var(--bg-active) / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-button-primary {
-    --tw-bg-opacity: 1;
-    background-color: rgb(var(--button-primary) / var(--tw-bg-opacity));
-  }
-
   .dark\:text-red-400 {
     --tw-text-opacity: 1;
     color: rgb(248 113 113 / var(--tw-text-opacity));
@@ -4204,10 +4180,5 @@ img.mana-symbol-sm {
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:hover\:bg-button-primary-active:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(var(--button-primary-active) / var(--tw-bg-opacity));
   }
 }
