--- a/packages/server/src/views/main.pug
+++ b/packages/server/src/views/main.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en' class=theme)
+html(lang='en' class=htmlClasses)
 	head
 		meta(charset='UTF-8')
 		meta(name='description', content='Build, playtest, and share your Magic the Gathering cube!')
